--- a/views/index.html
+++ b/views/index.html
@@ -59,6 +59,8 @@
       <div class="card"><img src="../img/bizlink2.png" alt="Project 2" /></div>
       <div class="card"><img src="../img/front-end-vue.png" alt="Project 3" /></div>
       <div class="card"><img src="../img/crud_laundry.png" alt="Project 4" /></div>
+      <div class="card"><img src="../img/landing-page.png " alt="Project 4" /></div>
+
     </div>
 
     <a href="../index.html" class="back-button">Kembali ke Halaman Utama</a>
