--- a/views/index.html
+++ b/views/index.html
@@ -46,17 +46,14 @@
       }
 
       .gallery-grid .card {
-        background: #fff;
         border-radius: 12px;
         padding: 10px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
         cursor: pointer;
       }
 
       .gallery-grid .card:hover {
         transform: translateY(-4px);
-        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
       }
 
       .gallery-grid .card img {
@@ -146,6 +143,34 @@
         </div>
         <div class="card">
           <img src="../img/landing-page.png" alt="Project 5" />
+        </div>
+        <div class="card">
+          <img src="../img/UIUX.png" alt="Project 6" />
+        </div>
+      </div>
+
+    </div>
+
+    <div class="slider-container">
+      <h1 class="h1card">Certificate</h1>
+      <div class="gallery-grid">
+        <div class="card">
+          <img src="../img/certificate-1758515336776.jpg" alt="Project 1" />
+        </div>
+        <div class="card">
+          <img src="../img/certificate-1758515368645.jpg" alt="Project 2" />
+        </div>
+        <div class="card">
+          <img src="../img/certificate-1758515379976.jpg" alt="Project 3" />
+        </div>
+        <div class="card">
+          <img src="../img/certificate.png" alt="Project 4" />
+        </div>
+        <div class="card">
+          <img src="../img/certificate1.png" alt="Project 5" />
+        </div>
+        <div class="card">
+          <img src="../img/certificate2.png" alt="Project 6" />
         </div>
       </div>
 
