--- a/views/index.html
+++ b/views/index.html
@@ -147,6 +147,9 @@
         <div class="card">
           <img src="../img/UIUX.png" alt="Project 6" />
         </div>
+        <div class="card">
+          <img src="../img/travel.png" alt="Project 7" />
+        </div>
       </div>
 
     </div>
